apps/nextpvr/k8s.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextpvr
  namespace: media
  labels:
    app.kubernetes.io/name: nextpvr
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nextpvr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextpvr
    spec:
      hostNetwork: true
      ## Use cluster internal dns config for lookup of e.g. pushgateway
      dnsPolicy: "None" # Don't use the host's DNS policy
      dnsConfig:
        nameservers:
          - 10.43.0.10 # IP of cluster DNS service (kube-dns or core-dns)
        searches:
          - svc.cluster.local # Default search domain
      containers:
        - name: nextpvr
          image: nextpvr/nextpvr_amd64:latest@sha256:5d7206282fddcf005d3fe5aec59d2a7698a5ffe84950d41d4e8fad17e7a7c866
          volumeMounts:
            - name: config-vol
              mountPath: /config
            - mountPath: /vol_raidz1/video
              name: video
          resources:
            limits:
              gpu.intel.com/i915: "1"
            requests:
              cpu: 50m
              memory: 384Mi
              gpu.intel.com/i915: "1"
      restartPolicy: Always
      volumes:
        - name: config-vol
          persistentVolumeClaim:
            claimName: longhorn-pvc-nextpvr-config
        - name: video
          persistentVolumeClaim:
            claimName: smb-pvc-video
