apps/nextpvr/k8s.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nextpvr
  namespace: media
  labels:
    app: nextpvr
spec:
  type: ClusterIP
  ports:
    - port: 8866
      targetPort: 8866
      protocol: TCP
      name: tcp-port
    #- port: 16891
    #  targetPort: 16891
    #  protocol: UDP
    #  name: udp-port
  selector:
    app: nextpvr
