apps/nextpvr/ingress.enc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nextpvr
    namespace: media
    labels:
        app.kubernetes.io/name: nextpvr
    annotations:
        # HTTPS entrypoint enabled
        traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
        # TLS enabled
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd, authelia-forwardauth-authelia@kubernetescrd
spec:
    ingressClassName: traefik
    tls:
        - hosts:
            - ENC[AES256_GCM,data:Sg48OHNl+/w51YreMHmynucJ/0AJExCj,iv:cSVl2JaXjDN5T8PeL8TOOvZJoPA84oKOLwneUa+pGVE=,tag:e6jtlzMXtjeN5xxmOwgD6w==,type:str]
          secretName: wildcard-cloudflare-production-01
    rules:
        - host: ENC[AES256_GCM,data:acZ1Sv/5AXIkhMvSC0EpNs5UesvXMqIW,iv:2PObOHT5r1TC9WY24Igdfkwr7SI2w4NJ6s13weJkbQw=,tag:Sm6vcTpKeIv8XfZGc4rEug==,type:str]
          http:
            paths:
                - path: /
                  pathType: Prefix
                  backend:
                    service:
                        name: nextpvr
                        port:
                            number: 8866
sops:
    age:
        - recipient: age1d2g7tgqpfvxulsusn3m608h60h2hne7yqwv5nh5nd24z6h0hgq0skjkhw8
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBmSGg2WXlSa1gyQnM5NnEy
[...]
            uRJ8LZ+xsOaO4qXPv6deks7oiMpG17LcupwRLQ2mwHFFX1/y5iLGew==
            -----END AGE ENCRYPTED FILE-----
        - recipient: age1q522xtgjrmvr43w7um5rh02ta3yfns635680hz4m7uhw0nfqj5zqgxnz27
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtRXBIdjhmb01SVmQ3Q3h4
[...]
            JUepuSHTPVU3UPygyMpDgFn1LhKu+M+kOHfRIxhhWeSxrKMr/mcfYg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2025-08-06T22:45:36Z"
    mac: ENC[AES256_GCM,data:lGKDMfENblP08NfCY9gdN6FTpNe8MPU8ye6mgV309+ar1zmNXq9Ol26xCE22oIOSCiuoRaYNx35R+8MllesYE0JP/NUCEelKZAZSg1TfQfjze7jv2ffYhjXfdjCPD7XCcTBBuBmA4C4dDTLhng2bJVRbQWIVnUYSoiUs4L6meu0=,iv:UN5IaslyPleZwjK/C51Y66gzJUlFUqL4CUrpMumir2k=,tag:TVJe255IqHpvfur2lOgmEw==,type:str]
    encrypted_regex: ^(data|stringData|email|dnsNames|.*(H|h)osts?|hostname|username|password|url|issuer|argocdServerAdminPassword|oidc.config|commonName|literals|.*awsAccessKeyId|.*awsSecretAccessKey|.*defaultAdminPassword|apiToken|accountId|rootPassword|replicationPassword|adminPassword|root_url|client_secret|auth_url|api_url|PIHOLE_DOMAIN|TUNNEL_DNS_UPSTREAM|customDnsEntries|securityTokenKey|emailRecipients|.*provider_url|.*redirect_url|.*accesskeyEncryption|SEMAPHORE_WEB_ROOT|token|cookieEnc [...]
    version: 3.10.2
